added template for single service pages

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -25,4 +25,12 @@ layout: default
 </section>
 <!-- Inne Page Banner Area End Here --> 
 
+<!-- Single Service Area Start Here -->
+<section class="single-service-wrap-layout1">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-12">
+
 {{ content }}
+
+{% include service/sidebar.html %}
