fixed asset loading on sub pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 <div class="col-lg-4">
                     <div class="footer-box-layout1">
                         <div class="footer-logo">
-                            <a href="index.html"><img src="http://localhost:4000/img/logo-light.png" alt="logo"></a>
+                            <a href="index.html"><img src="../img/logo-light.png" alt="logo"></a>
                         </div>
                         <p>We always deliver 100% customer satisfaction and absolute quality 
                             work without any other compromise, just like we've been doing since 1982.</p>
@@ -91,33 +91,33 @@
 <!-- Footer Area End Here -->
 </div>
 <!-- jquery-->
-<script src="http://localhost:4000/js/jquery-3.3.1.min.js"></script>
+<script src="../js/jquery-3.3.1.min.js"></script>
 <!-- Plugins js -->
-<script src="http://localhost:4000/js/plugins.js"></script>
+<script src="../js/plugins.js"></script>
 <!-- Popper js -->
-<script src="http://localhost:4000/js/popper.min.js"></script>
+<script src="../js/popper.min.js"></script>
 <!-- Bootstrap js -->
-<script src="http://localhost:4000/js/bootstrap.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 <!-- MeanMenu js -->
-<script src="http://localhost:4000/js/jquery.meanmenu.min.js"></script> 
+<script src="../js/jquery.meanmenu.min.js"></script> 
 <!-- Slick Slider js -->
-<script src="http://localhost:4000/vendor/slick/slick.min.js"></script>
+<script src="../vendor/slick/slick.min.js"></script>
 <!-- ImagesLoaded js -->
-<script src="http://localhost:4000/js/imagesloaded.pkgd.min.js"></script>
+<script src="../js/imagesloaded.pkgd.min.js"></script>
 <!-- Google Map js -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtmXSwv4YmAKtcZyyad9W7D4AC08z0Rb4"></script>
 <!-- Select 2 js -->
-<script src="http://localhost:4000/js/select2.min.js"></script>
+<script src="../js/select2.min.js"></script>
 <!-- Magnific Popup js -->
-<script src="http://localhost:4000/js/jquery.magnific-popup.min.js"></script> 
+<script src="../js/jquery.magnific-popup.min.js"></script> 
 <!-- Counter Up js -->
-<script src="http://localhost:4000/js/jquery.counterup.min.js"></script> 
+<script src="../js/jquery.counterup.min.js"></script> 
 <!-- Waypoints js -->
-<script src="http://localhost:4000/js/waypoints.min.js"></script> 
+<script src="../js/waypoints.min.js"></script> 
 <!-- Validator js -->
-<script src="http://localhost:4000/js/validator.min.js"></script>
+<script src="../js/validator.min.js"></script>
 <!-- Main js -->
-<script src="http://localhost:4000/js/main.js"></script>
+<script src="../js/main.js"></script>
 
 </body>
 
