--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- Inne Page Banner Area Start Here -->
-<section class="inner-page-banner bg-common" data-bg-image="img/figure/breadcumb.jpg">  
+<section class="inner-page-banner bg-common" data-bg-image="{{ page.bg-image}}">  
     <div class="container">
         <div class="row">
             <div class="col-12">
