--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,10 +1,10 @@
 <!-- Call To Action Area Start Here -->
-<section class="action-wrap-layout1 bg-common" data-bg-image="http://localhost:4000/img/figure/banner-shape.png">
+<section class="action-wrap-layout1 bg-common" data-bg-image="../img/figure/banner-shape.png">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-9 col-12">
                 <div class="action-box-layout1">
-                    <h2 class="item-title">Get Your Roofing Project Started Today!</h2>
+                    <h2 class="item-title">Get Your Project Started Today!</h2>
                 </div>
             </div>
             <div class="col-lg-3 col-12 d-flex justify-content-lg-end justify-content-center">
@@ -20,15 +20,15 @@
 <section class="contact-wrap-layout1">
     <div id="googleMap" class="google-map" style="width:100%; height:620px; border-radius: 0;"></div>
     <div class="contact-box-layout1">
-        <h3 class="item-title">Contact Information</h3>
+        <h3 class="item-title">Contact Us</h3>
         <div class="media">
             <div class="item-icon">
                 <i class="fas fa-map-marker-alt"></i>
             </div>
             <div class="media-body space-md">
                 <ul>
-                    <li>59 Street aorem Street, Chicago,</li>
-                    <li>Newyork City</li>
+                    <li><a href="https://g.page/elite-concrete-utah?we" target="_blank">3596 South 300 West Suite 10 <br />
+                    Salt Lake City, UT 84115</a></li>
                 </ul>
             </div>
         </div>
@@ -38,8 +38,7 @@
             </div>
             <div class="media-body space-md">
                 <ul>
-                    <li>+880-96-100-98</li>
-                    <li>+880-96-100-98</li>
+                    <li>{{ site.phone}}</li>
                 </ul>
             </div>
         </div>
@@ -49,8 +48,7 @@
             </div>
             <div class="media-body space-md">
                 <ul>
-                    <li>info@gmail.com</li>
-                    <li>info@gmail.com</li>
+                    <li>{{ site.email }}</li>
                 </ul>
             </div>
         </div>
