--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-area">
                                 <a href="index.html" class="temp-logo">
-                                    <img src="http://localhost:4000/img/logo-dark.png" alt="logo" class="img-fluid">
+                                    <img src="../img/logo-dark.png" alt="logo" class="img-fluid">
                                 </a>
                             </div>
                         </div>
@@ -56,30 +56,21 @@
                             <nav id="dropdown" class="template-main-menu">
                                 <ul>
                                    <li>
-                                        <a href="#">HOME</a>
+                                        <a href="{{ site.url }}">HOME</a>
+                                    </li>
+                                    <li>
+                                        <a href="{{ site.url }}/about">ABOUT</a>
                                         <ul class="dropdown-menu-col-1">
                                             <li>
-                                                <a href="index.html">Home Page 1</a>
-                                            </li>
-                                            <li>
-                                                <a href="index2.html">Home Page 2</a>
-                                            </li>
-                                            <li>
-                                                <a href="index3.html">Home Page 3</a>
-                                            </li>
-                                            <li>
-                                                <a href="index4.html">Home Page 4</a>
+                                                <a href="{{ site.url}}/blog">Blog</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="about1.html">ABOUT</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">SERVICES</a>
+                                        <a href="{{ site.url }}/services">SERVICES</a>
                                         <ul class="dropdown-menu-col-1">
                                             <li>
-                                                <a href="service1.html">Services 1</a>
+                                                <a href="{{ site.url}}/services/concrete-staining-utah">Concrete Staining</a>
                                             </li>
                                             <li>
                                                 <a href="service2.html">Services 2</a>
@@ -96,134 +87,7 @@
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="#">BLOGS</a>
-                                        <ul class="dropdown-menu-col-1">
-                                            <li>
-                                                <a href="blog1.html">Blog 1</a>
-                                            </li>
-                                            <li>
-                                                <a href="blog2.html">Blog 2</a>
-                                            </li>
-                                            <li>
-                                                <a href="blog3.html">Blog 3</a>
-                                            </li>
-                                            <li>
-                                                <a href="single-blog1.html">Single Blog 1</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="possition-static hide-on-mobile-menu">
-                                        <a href="#">PAGES</a>
-                                        <div class="template-mega-menu">
-                                            <div class="container">
-                                                <div class="row">
-                                                    <div class="col-3">
-                                                        <div class="menu-ctg-title">Home</div>
-                                                        <ul class="sub-menu">
-                                                            <li>
-                                                                <a href="index.html">
-                                                                    <i class="fas fa-home"></i>Home 1</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="index2.html">
-                                                                    <i class="fas fa-home"></i>Home 2</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="index3.html">
-                                                                    <i class="fas fa-home"></i>Home 3</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="index4.html">
-                                                                    <i class="fas fa-home"></i>Home 4</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-3">
-                                                        <div class="menu-ctg-title">Pages</div>
-                                                        <ul class="sub-menu">
-                                                            <li>
-                                                                <a href="project1.html">
-                                                                    <i class="fas fa-handshake"></i>Projects 1</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="single-project1.html">
-                                                                    <i class="fas fa-handshake"></i>Single Project 1</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="single-project2.html">
-                                                                    <i class="fas fa-handshake"></i>Single Porject 2</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="team1.html">
-                                                                    <i class="fas fa-user-tie"></i>Team 1</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-3">
-                                                        <div class="menu-ctg-title">Pages</div>
-                                                        <ul class="sub-menu">
-                                                            <li>
-                                                                <a href="team2.html">
-                                                                    <i class="fas fa-user-tie"></i>Team 2</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="single-team1.html">
-                                                                    <i class="fas fa-user-tie"></i>Single Team</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="shop1.html">
-                                                                    <i class="fas fa-cart-plus"></i>Shop</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="single-product.html">
-                                                                    <i class="fas fa-cart-plus"></i>Single Product</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-3">
-                                                        <div class="menu-ctg-title">Pages</div>
-                                                        <ul class="sub-menu">
-                                                            <li>
-                                                                <a href="faq.html">
-                                                                    <i class="fas fa-chalkboard-teacher"></i>Faq Page</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="coming-soon.html">
-                                                                    <i class="fas fa-spinner"></i>Coming Soon</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="404.html">
-                                                                    <i class="fas fa-exclamation-triangle"></i>404 Error</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="contact.html">
-                                                                    <i class="far fa-address-book"></i>Contact</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="hide-on-desktop-menu">
-                                        <a href="#">Pages</a>
-                                        <ul>
-                                            <li>
-                                                <a href="about1.html">About</a>
-                                            </li>
-                                            <li>
-                                                <a href="service1.html">Services</a>
-                                            </li>
-                                            <li>
-                                                <a href="project1.html">Project</a>
-                                            </li>
-                                            <li>
-                                                <a href="404.html">404 Error</a>
-                                            </li>
-                                            <li>
-                                                <a href="contact.html">Contact</a>
-                                            </li>
-                                        </ul>
+                                        <a href="{{ site.url }}/projects">PROJECTS</a>
                                     </li>
                                     <li>
                                         <a href="contact.html">CONTACT</a>
