--- a/_includes/service/sidebar.html
+++ b/_includes/service/sidebar.html
@@ -29,25 +29,26 @@
     </div>
     <div class="widget widget-download">
         <div class="heading-layout3">
-            <h3>Download Now</h3>
+            <h3>Check Out Our Color Chart</h3>
         </div>
         <ul class="item-list">
             <li>
-                <a href="#"><i class="far fa-file-pdf"></i>Download Document .pdf</a>
-            </li>
-            <li>
-                <a href="#"><i class="far fa-file-word"></i>Download Document .Word</a>
+                <a href="{{ page.colorchart}}" target="_blank"><i class="far fa-file-pdf"></i>Download Color Chart PDF</a>
             </li>
         </ul>
     </div>
     <div class="widget widget-form">
         <div class="heading-layout3">
-            <h3>Have Any Question?</h3>
+            <h3>Let's Talk About Your Project</h3>
         </div>
         <form class="contact-form-box">
             <div class="row">
                 <div class="col-12 form-group">
                     <input type="text" placeholder="Name *" class="form-control" name="name" data-error="Name field is required" required>
+                    <div class="help-block with-errors"></div>
+                </div>
+                <div class="col-12 form-group">
+                    <input type="text" placeholder="Phone *" class="form-control" name="phone" data-error="Phone number field is required" required>
                     <div class="help-block with-errors"></div>
                 </div>
                 <div class="col-12 form-group">
@@ -67,7 +68,7 @@
     </div>
     <div class="widget widget-banner">
         <div class="banner-img">
-            <img src="http://localhost:4000/img/figure/widget-banner.jpg" alt="Banner">
+            <img src="../img/figure/widget-banner.jpg" alt="Banner">
             <div class="item-content">
                 <div class="big-text">Available</div>
                 <div class="sub-text">for any type of Roof construction</div>
