--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,36 +4,37 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <base href="{{ site.url }}">
     <title>{{ page.metaTitle }}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="http://localhost:4000/img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.png">
     <!-- Normalize CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/css/normalize.css">
+    <link rel="stylesheet" href="../css/normalize.css">
     <!-- Main CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- MeanMenu CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/css/meanmenu.min.css">
+    <link rel="stylesheet" href="../css/meanmenu.min.css">
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="../css/fontawesome-all.min.css">
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/css/animate.min.css">
+    <link rel="stylesheet" href="../css/animate.min.css">
     <!-- FlatIcon CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/font/flaticon.css">
+    <link rel="stylesheet" href="../font/flaticon.css">
     <!-- Slick Slider CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/vendor/slick/slick.css">
-    <link rel="stylesheet" href="http://localhost:4000/vendor/slick/slick-theme.css">
+    <link rel="stylesheet" href="../vendor/slick/slick.css">
+    <link rel="stylesheet" href="../vendor/slick/slick-theme.css">
     <!-- Select 2 CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/css/select2.min.css">
+    <link rel="stylesheet" href="../css/select2.min.css">
     <!-- Magnific Popup CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/css/magnific-popup.css">
+    <link rel="stylesheet" href="../css/magnific-popup.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="http://localhost:4000/style.css">
+    <link rel="stylesheet" href="../style.css">
     <!-- Modernize js -->
-    <script src="http://localhost:4000/js/modernizr-3.7.1.min.js"></script>
+    <script src="../js/modernizr-3.7.1.min.js"></script>
 </head>
 
 {% include header.html %}
