added robots.txt and 404 page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 <div class="col-lg-4">
                     <div class="footer-box-layout1">
                         <div class="footer-logo">
-                            <a href="index.html"><img src="../img/logo-light.png" alt="logo"></a>
+                            <a href="index.html"><img src="../img/Elite Concrete Logo.png" alt="logo"></a>
                         </div>
                         <p>We always deliver 100% customer satisfaction and absolute quality 
                             work without any other compromise, just like we've been doing since 1982.</p>
@@ -85,7 +85,7 @@
         </div>
     </div>
     <div class="footer-bottom-wrap-layout1">
-        <div class="copyright">Copyright © 2019 Roofit by <a href="https://www.radiustheme.com/" target="_blank">RadiusTheme.</a> All Rights Reserved.</div>
+        <div class="copyright">Copyright © 2019 Elite Concrete Utah. All Rights Reserved. Built By: <a href="https://sitesbyhayden.com" target="_blank">Sites By Hayden</a></div>
     </div>
 </footer>
 <!-- Footer Area End Here -->
