--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-area">
                                 <a href="index.html" class="temp-logo">
-                                    <img src="../img/logo-dark.png" alt="logo" class="img-fluid">
+                                    <img src="../img/Elite Concrete Logo.png" alt="logo" class="img-fluid">
                                 </a>
                             </div>
                         </div>
