added netlify form tag to sidebar contact form

--- a/_includes/service/sidebar.html
+++ b/_includes/service/sidebar.html
@@ -41,7 +41,7 @@
         <div class="heading-layout3">
             <h3>Let's Talk About Your Project</h3>
         </div>
-        <form class="contact-form-box">
+        <form class="contact-form-box" netlify>
             <div class="row">
                 <div class="col-12 form-group">
                     <input type="text" placeholder="Name *" class="form-control" name="name" data-error="Name field is required" required>
