--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,15 +17,14 @@
                         <div class="col-lg-6">
                             <div class="header-topbar-layout1">
                                 <ul class="header-top-left">
-                                    <li><i class="fas fa-envelope"></i>E-mail: roofit@gmail.com</li>
-                                    <li><i class="far fa-clock"></i>Hours: Mon-Fri: 8.00 am - 7.00 pm</li>
+                                    <li><i class="far fa-clock"></i>Hours: Mon-Fri: 7.00 am - 7.00 pm</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-lg-6 d-flex justify-content-end">
                             <div class="header-topbar-layout1">
                                 <ul class="header-top-right">
-                                    <li><i class="fas fa-phone-volume"></i>+880-96-100</li>
+                                    <li><i class="fas fa-phone-volume"></i>{{ site.phone }}</li>
                                     <li class="social-icon">
                                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                                         <a href="#"><i class="fab fa-twitter"></i></a>
