--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 <div class="col-lg-4">
                     <div class="footer-box-layout1">
                         <div class="footer-logo">
-                            <a href="index.html"><img src="../img/Elite Concrete Logo.png" alt="logo"></a>
+                            <a href="{{ site.url }}"><img src="../img/Elite Concrete Logo.png" alt="logo"></a>
                         </div>
                         <p>We always deliver 100% customer satisfaction and absolute quality 
                             work without any other compromise, just like we've been doing since 1982.</p>
