--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -11,10 +11,10 @@ layout: default
                     <h1>{{ page.title }}</h1>
                     <ul>
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="{{ site.url }}">Home</a>
                         </li>
                         <li>
-                            <a href="service1.html">Services</a>
+                            <a href="{{ site.url }}/services">Services</a>
                         </li>
                         <li>{{ page.servicename }}</li>
                     </ul>
