--- a/style.css
+++ b/style.css
@@ -3901,7 +3901,7 @@ div#wrapper.open > .offcanvas-mask {
 /*------------------- 5.1 About Us -------------------*/
 .about-wrap-layout1 {
   background-color: #6ac5f2;
-  background-image: url('img/about/about-bg.png');
+  background-image: url('img/polished-concrete-services.jpg');
   background-repeat: no-repeat;
   background-position: right bottom;
 }
