--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,19 +65,39 @@
                             <h3>Newsletter</h3>
                         </div>
                         <div class="footer-form-box">
-                            <p>Subscribe For Daily Latest News &amp; Updates</p>
-                            <form class="contact-form-box">
-                                <div class="row">
-                                    <div class="col-12 form-group">
-                                        <input type="email" placeholder="E-mail Address" class="form-control" name="name" data-error="Name field is required" required>
-                                        <div class="help-block with-errors"></div>
+                            <div class="contact-box-layout1">
+                                <div class="media">
+                                    <div class="item-icon">
+                                        <i class="fas fa-map-marker-alt"></i>
                                     </div>
-                                    <div class="col-12 form-group">
-                                        <button type="submit" class="item-btn">Subscribe Now</button>
+                                    <div class="media-body space-md">
+                                        <ul>
+                                            <li><a href="https://g.page/elite-concrete-utah?we" target="_blank">3596 South 300 West Suite 10 <br />
+                                            Salt Lake City, UT 84115</a></li>
+                                        </ul>
                                     </div>
                                 </div>
-                                <div class="form-response"></div>
-                            </form>
+                                <div class="media">
+                                    <div class="item-icon">
+                                        <i class="fas fa-phone-volume"></i>
+                                    </div>
+                                    <div class="media-body space-md">
+                                        <ul>
+                                            <li>{{ site.phone}}</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="media">
+                                    <div class="item-icon">
+                                        <i class="far fa-envelope"></i>
+                                    </div>
+                                    <div class="media-body space-md">
+                                        <ul>
+                                            <li>{{ site.email }}</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -105,7 +125,6 @@
 <!-- ImagesLoaded js -->
 <script src="../js/imagesloaded.pkgd.min.js"></script>
 <!-- Google Map js -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtmXSwv4YmAKtcZyyad9W7D4AC08z0Rb4"></script>
 <!-- Select 2 js -->
 <script src="../js/select2.min.js"></script>
 <!-- Magnific Popup js -->
