--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,8 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-WJZJW3X');</script>
     <!-- End Google Tag Manager -->
+
+    {{ page.schema }}
 </head>
 
 {% include header.html %}
