--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
     })(window,document,'script','dataLayer','GTM-WJZJW3X');</script>
     <!-- End Google Tag Manager -->
 
-    <script type="application/ld+json"></script>{{ page.schema }}</script>
+    <script type="application/ld+json">{ {{ page.schema }} }</script>
 </head>
 
 {% include header.html %}
