--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,14 @@
     })(window,document,'script','dataLayer','GTM-WJZJW3X');</script>
     <!-- End Google Tag Manager -->
 
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org/",
+          "@type": "WebSite",
+          "name": "Elite Concrete Utah",
+          "url": "https://eliteconcreteutah.com"
+        }
+    </script>
     <script type="application/ld+json">{ {{ page.schema }} }</script>
 </head>
 
