--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -9,32 +9,32 @@
     <meta name="description" content="{{ page.metaDescription }}">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://eliteconcreteutah.com/img/favicon.png">
     <!-- Normalize CSS -->
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="https://eliteconcreteutah.com/css/normalize.css">
     <!-- Main CSS -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="https://eliteconcreteutah.com/css/main.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://eliteconcreteutah.com/css/bootstrap.min.css">
     <!-- MeanMenu CSS -->
-    <link rel="stylesheet" href="../css/meanmenu.min.css">
+    <link rel="stylesheet" href="https://eliteconcreteutah.com/css/meanmenu.min.css">
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="../css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="https://eliteconcreteutah.com/css/fontawesome-all.min.css">
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="../css/animate.min.css">
+    <link rel="stylesheet" href="https://eliteconcreteutah.com/css/animate.min.css">
     <!-- FlatIcon CSS -->
-    <link rel="stylesheet" href="../font/flaticon.css">
+    <link rel="stylesheet" href="https://eliteconcreteutah.com/font/flaticon.css">
     <!-- Slick Slider CSS -->
-    <link rel="stylesheet" href="../vendor/slick/slick.css">
-    <link rel="stylesheet" href="../vendor/slick/slick-theme.css">
+    <link rel="stylesheet" href="https://eliteconcreteutah.com/vendor/slick/slick.css">
+    <link rel="stylesheet" href="https://eliteconcreteutah.com/vendor/slick/slick-theme.css">
     <!-- Select 2 CSS -->
-    <link rel="stylesheet" href="../css/select2.min.css">
+    <link rel="stylesheet" href="https://eliteconcreteutah.com/css/select2.min.css">
     <!-- Magnific Popup CSS -->
-    <link rel="stylesheet" href="../css/magnific-popup.css">
+    <link rel="stylesheet" href="https://eliteconcreteutah.com/css/magnific-popup.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://eliteconcreteutah.com/style.css">
     <!-- Modernize js -->
-    <script src="../js/modernizr-3.7.1.min.js"></script>
+    <script src="https://eliteconcreteutah.com/js/modernizr-3.7.1.min.js"></script>
 
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
