--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,4 +64,146 @@
 
                 {% include contact.html %}
                
-                {% include footer.html %}
+ <!-- Footer Area Start Here -->
+ <footer class="footer-wrap-layout1">
+    <div class="footer-top-wrap-layout1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="footer-box-layout1">
+                        <div class="footer-logo">
+                            <a href="{{ site.url }}"><img src="https://eliteconcreteutah.com/img/Elite Concrete Logo.png" alt="logo"></a>
+                        </div>
+                        <p>We always deliver 100% customer satisfaction and absolute quality 
+                            work without any other compromise, just like we've been doing since 1982.</p>
+                        <ul class="footer-social">
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                            <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
+                            <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="footer-box-layout1">
+                        <div class="footer-title">
+                            <h3>Quick Links</h3>
+                        </div>
+                        <div class="footer-menu-box">
+                            <ul class="footer-menu-list">
+                                <li>
+                                    <a href="index.html">Home</a>
+                                </li>
+                                <li>
+                                    <a href="about1.html">About Us</a>
+                                </li>
+                                <li>
+                                    <a href="#">Residential</a>
+                                </li>
+                                <li>
+                                    <a href="#">Commercial Roof</a>
+                                </li>
+                                <li>
+                                    <a href="#">Repairs</a>
+                                </li>
+                            </ul>
+                            <ul class="footer-menu-list">
+                                <li>
+                                    <a href="#">Site Map</a>
+                                </li>
+                                <li>
+                                    <a href="#">Maintenance</a>
+                                </li>
+                                <li>
+                                    <a href="#">Repairs Roofing </a>
+                                </li>
+                                <li>
+                                    <a href="blog1.html">Blog</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="footer-box-layout1">
+                        <div class="footer-title">
+                            <h3>Newsletter</h3>
+                        </div>
+                        <div class="footer-form-box">
+                            <div class="contact-box-layout1">
+                                <div class="media">
+                                    <div class="item-icon">
+                                        <i class="fas fa-map-marker-alt"></i>
+                                    </div>
+                                    <div class="media-body space-md">
+                                        <ul>
+                                            <li><a href="https://g.page/elite-concrete-utah?we" target="_blank">3596 South 300 West Suite 10 <br />
+                                            Salt Lake City, UT 84115</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="media">
+                                    <div class="item-icon">
+                                        <i class="fas fa-phone-volume"></i>
+                                    </div>
+                                    <div class="media-body space-md">
+                                        <ul>
+                                            <li>{{ site.phone}}</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="media">
+                                    <div class="item-icon">
+                                        <i class="far fa-envelope"></i>
+                                    </div>
+                                    <div class="media-body space-md">
+                                        <ul>
+                                            <li>{{ site.email }}</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom-wrap-layout1">
+        <div class="copyright">Copyright © 2019 Elite Concrete Utah. All Rights Reserved. Built By: <a href="https://sitesbyhayden.com" target="_blank">Sites By Hayden</a></div>
+    </div>
+</footer>
+<!-- Footer Area End Here -->
+</div>
+<!-- jquery-->
+<script src="https://eliteconcreteutah.com/js/jquery-3.3.1.min.js"></script>
+<!-- Plugins js -->
+<script src="https://eliteconcreteutah.com/js/plugins.js"></script>
+<!-- Popper js -->
+<script src="https://eliteconcreteutah.com/js/popper.min.js"></script>
+<!-- Bootstrap js -->
+<script src="https://eliteconcreteutah.com/js/bootstrap.min.js"></script>
+<!-- MeanMenu js -->
+<script src="https://eliteconcreteutah.com/js/jquery.meanmenu.min.js"></script> 
+<!-- Slick Slider js -->
+<script src="https://eliteconcreteutah.com/vendor/slick/slick.min.js"></script>
+<!-- ImagesLoaded js -->
+<script src="https://eliteconcreteutah.com/js/imagesloaded.pkgd.min.js"></script>
+<!-- Google Map js -->
+<!-- Select 2 js -->
+<script src="https://eliteconcreteutah.com/js/select2.min.js"></script>
+<!-- Magnific Popup js -->
+<script src="https://eliteconcreteutah.com/js/jquery.magnific-popup.min.js"></script> 
+<!-- Counter Up js -->
+<script src="https://eliteconcreteutah.com/js/jquery.counterup.min.js"></script> 
+<!-- Waypoints js -->
+<script src="https://eliteconcreteutah.com/js/waypoints.min.js"></script> 
+<!-- Validator js -->
+<script src="https://eliteconcreteutah.com/js/validator.min.js"></script>
+<!-- Main js -->
+<script src="https://eliteconcreteutah.com/js/main.js"></script>
+
+</body>
+
+</html>
