--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,10 @@
     <!-- Modernize js -->
     <script src="https://eliteconcreteutah.com/js/modernizr-3.7.1.min.js"></script>
 
+    {% if page.noindex %}
+    <meta name="robots" content="noindex">
+    {% endif %}
+
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
