--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,7 +115,7 @@
                     <div class="row d-flex align-items-center">
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-area">
-                                <a href="index.html" class="temp-logo">
+                                <a href="https://eliteconcreteutah.com" class="temp-logo">
                                     <img src="https://eliteconcreteutah.com/img/Elite-Concrete-Logo.png" alt="Elite Concrete Utah Logo" class="img-fluid">
                                 </a>
                             </div>
@@ -140,25 +140,13 @@
                                             <li>
                                                 <a href="{{ site.url}}/services/concrete-staining-utah">Concrete Staining</a>
                                             </li>
-                                            <li>
-                                                <a href="service2.html">Services 2</a>
-                                            </li>
-                                            <li>
-                                                <a href="service3.html">Services 3</a>
-                                            </li>
-                                            <li>
-                                                <a href="single-service1.html">Single Services 1</a>
-                                            </li>
-                                            <li>
-                                                <a href="single-service2.html">Single Services 2</a>
-                                            </li>
                                         </ul>
                                     </li>
                                     <li>
                                         <a href="{{ site.url }}/projects">PROJECTS</a>
                                     </li>
                                     <li>
-                                        <a href="contact.html">CONTACT</a>
+                                        <a href="{{ site.url }}/contact">CONTACT</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -167,7 +155,7 @@
                             <div class="header-action-layout1">
                                 <ul>
                                     <li class="header-action-btn">
-                                        <a href="#" class="item-btn">GET A FREE ESTIMATE</a>
+                                        <a href="{{ site.url }}/contact" class="item-btn">GET A FREE ESTIMATE</a>
                                     </li>
                                 </ul>
                             </div>
@@ -201,7 +189,7 @@
             </div>
             <div class="col-lg-3 col-12 d-flex justify-content-lg-end justify-content-center">
                 <div class="action-box-layout1">
-                   <a href="#" class="btn-fill-xl box-shadow bg-textprimary text-accent">GET A QUOTE<i class="fas fa-angle-right"></i></a>
+                   <a href="{{ site.url }}/contact" class="btn-fill-xl box-shadow bg-textprimary text-accent">GET A QUOTE<i class="fas fa-angle-right"></i></a>
                 </div>
             </div>
         </div>
@@ -238,10 +226,10 @@
                         <div class="footer-menu-box">
                             <ul class="footer-menu-list">
                                 <li>
-                                    <a href="index.html">Home</a>
+                                    <a href="{{ site.url }}">Home</a>
                                 </li>
                                 <li>
-                                    <a href="about1.html">About Us</a>
+                                    <a href="{{ site.url }}/about">About Us</a>
                                 </li>
                                 <li>
                                     <a href="#">Residential</a>
