--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -408,7 +408,7 @@ layout: default
             <p>Rake a type specimen book. It has survived not only five 
                 centuries, but also the leap into electronic typesetting
                 emaining essentially unchanged.</p>
-            <a href="#" class="btn-fill-xl bg-textprimary text-primarytext">READ MORE<i class="fas fa-angle-right"></i></a>
+            <a href="{{ site.url }}/about" class="btn-fill-xl bg-textprimary text-primarytext">ABOUT US<i class="fas fa-angle-right"></i></a>
         </div>
     </div>
 </section>
