--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -205,11 +205,11 @@
                         <p>We always deliver 100% customer satisfaction and absolute quality 
                             work without any other compromise, just like we've been doing since 1982.</p>
                         <ul class="footer-social">
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                            <li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                            <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
+                            <a href="https://www.facebook.com/eliteconcreteut/"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://twitter.com/eliteconcreteut"><i class="fab fa-twitter"></i></a>
+                                        <a href="https://g.page/elite-concrete-utah?share"><i class="fab fa-google-plus-g"></i></a>
+                                        <a href="https://www.pinterest.com/eliteconcreteut/"><i class="fab fa-pinterest"></i></a>
+                                        <a href="https://www.instagram.com/eliteconcreteut/"><i class="fab fa-instagram"></i></a>
                         </ul>
                     </div>
                 </div>
@@ -227,27 +227,12 @@
                                     <a href="{{ site.url }}/about">About Us</a>
                                 </li>
                                 <li>
-                                    <a href="#">Residential</a>
-                                </li>
-                                <li>
-                                    <a href="#">Commercial Roof</a>
-                                </li>
-                                <li>
-                                    <a href="#">Repairs</a>
+                                    <a href="{{ site.url }}/services/concrete-staining-utah">Concrete Staining</a>
                                 </li>
                             </ul>
                             <ul class="footer-menu-list">
                                 <li>
-                                    <a href="#">Site Map</a>
-                                </li>
-                                <li>
-                                    <a href="#">Maintenance</a>
-                                </li>
-                                <li>
-                                    <a href="#">Repairs Roofing </a>
-                                </li>
-                                <li>
-                                    <a href="blog1.html">Blog</a>
+                                    <a href="{{ site.url }}/blog">Blog</a>
                                 </li>
                             </ul>
                         </div>
