--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -205,11 +205,11 @@
                         <p>We always deliver 100% customer satisfaction and absolute quality 
                             work without any other compromise, just like we've been doing since 1982.</p>
                         <ul class="footer-social">
-                            <a href="https://www.facebook.com/eliteconcreteut/"><i class="fab fa-facebook-f"></i></a>
-                                        <a href="https://twitter.com/eliteconcreteut"><i class="fab fa-twitter"></i></a>
-                                        <a href="https://g.page/elite-concrete-utah?share"><i class="fab fa-google-plus-g"></i></a>
-                                        <a href="https://www.pinterest.com/eliteconcreteut/"><i class="fab fa-pinterest"></i></a>
-                                        <a href="https://www.instagram.com/eliteconcreteut/"><i class="fab fa-instagram"></i></a>
+                            <li><a href="https://www.facebook.com/eliteconcreteut/"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li><a href="https://twitter.com/eliteconcreteut"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="https://g.page/elite-concrete-utah?share"><i class="fab fa-google-plus-g"></i></a></li>
+                                        <li><a href="https://www.pinterest.com/eliteconcreteut/"><i class="fab fa-pinterest"></i></a></li>
+                                        <li><a href="https://www.instagram.com/eliteconcreteut/"><i class="fab fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
