--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,6 +135,9 @@
                                             <li>
                                                 <a href="{{ site.url}}/services/concrete-staining-utah">Concrete Staining</a>
                                             </li>
+                                            <li>
+                                                <a href="{{ site.url}}/services/decorative-concrete-utah">Decorative Concrete</a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li>
