added color chart pdfs

--- a/_includes/service/sidebar.html
+++ b/_includes/service/sidebar.html
@@ -29,11 +29,23 @@
     </div>
     <div class="widget widget-download">
         <div class="heading-layout3">
-            <h3>Check Out Our Color Chart</h3>
+            <h3>Check Out Our Color Charts</h3>
         </div>
         <ul class="item-list">
             <li>
-                <a href="{{ page.colorchart}}" target="_blank"><i class="far fa-file-pdf"></i>Download Color Chart PDF</a>
+                <a href="{{ site.url }}/docs/reflector_chart.pdf" target="_blank"><i class="far fa-file-pdf"></i>Metallic Epoxy PDF</a>
+            </li>
+            <li>
+                <a href="{{ site.url }}/docs/e100_epoxy_chart.pdf" target="_blank"><i class="far fa-file-pdf"></i>Solid Color Epoxy Epoxy PDF</a>
+            </li>
+            <li>
+                <a href="{{ site.url }}/docs/pcc_chart.pdf" target="_blank"><i class="far fa-file-pdf"></i>Concrete Overlay PDF</a>
+            </li>
+            <li>
+                <a href="{{ site.url }}/docs/hydrastone_chart.pdf" target="_blank"><i class="far fa-file-pdf"></i>Dye Stain PDF</a>
+            </li>
+            <li>
+                <a href="{{ site.url }}/docs/chem_stone_chart.pdf" target="_blank"><i class="far fa-file-pdf"></i>Acid Stain PDF</a>
             </li>
         </ul>
     </div>
