--- a/_includes/service/sidebar.html
+++ b/_includes/service/sidebar.html
@@ -7,22 +7,10 @@
         <div class="service-list">
             <ul>
                 <li>
-                    <a href="#"><i class="fas fa-long-arrow-alt-right"></i>Roof Repair</a>
+                    <a href="{{ site.url }}/services/concrete-staining-utah"><i class="fas fa-long-arrow-alt-right"></i>Concrete Staining</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-long-arrow-alt-right"></i>Siding</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fas fa-long-arrow-alt-right"></i>Insulation</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fas fa-long-arrow-alt-right"></i>Gutters</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fas fa-long-arrow-alt-right"></i>Inspection</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fas fa-long-arrow-alt-right"></i>Replacement</a>
+                    <a href="{{ site.url }}/services/decorative-concrete-utah"><i class="fas fa-long-arrow-alt-right"></i>Decorative Concrete</a>
                 </li>
             </ul>
         </div>
@@ -80,7 +68,7 @@
     </div>
     <div class="widget widget-banner">
         <div class="banner-img">
-            <img src="../img/figure/widget-banner.jpg" alt="Banner">
+            <img src="{{ site.url }}/img/metallic-epoxy-floor-in-waiting-room.jpg" alt="Metallic Epoxy Flooring">
             <div class="item-content">
                 <div class="big-text">Available</div>
                 <div class="sub-text">for any type of Roof construction</div>
