--- a/_includes/schema/home.html
+++ b/_includes/schema/home.html
@@ -3,7 +3,7 @@
       "@context": "https://schema.org",
       "@type": "GeneralContractor",
       "name": "Elite Concrete Utah",
-      "image": "",
+      "image": "https://eliteconcreteutah.com/img/Elite-Concrete-Logo.png",
       "@id": "https://eliteconcreteutah.com",
       "url": "https://eliteconcreteutah.com",
       "telephone": "+18015507496",
@@ -41,4 +41,4 @@
         "https://eliteconcreteutah.com/"
       ]
     }
-</script>
+    </script>
