--- a/_includes/schema/concrete-staining.html
+++ b/_includes/schema/concrete-staining.html
@@ -23,67 +23,18 @@
 
 <script type="application/ld+json">
   {
-      "@context": "http://schema.org",
-      "@type": "Service",
-      "provider": {
-        "@type": "GeneralContractor",
-        "name": "Elite Concrete Utah",
-        "image": "https://eliteconcreteutah.com/img/Elite-Concrete-Logo.png",
-        "@id": "https://eliteconcreteutah.com",
-        "url": "https://eliteconcreteutah.com",
-        "telephone": "+18015507496",
-        "priceRange": "$$",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "3596 South 300 West #10",
-          "addressLocality": "Salt Lake City",
-          "addressRegion": "UT",
-          "postalCode": "84115",
-          "addressCountry": "US"
-        },
-        "geo": {
-          "@type": "GeoCoordinates",
-          "latitude": 40.6929301,
-          "longitude": -111.9001526
-        },
-        "openingHoursSpecification": {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": [
-            "Monday",
-            "Tuesday",
-            "Wednesday",
-            "Thursday",
-            "Friday"
-          ],
-          "opens": "07:00",
-          "closes": "19:00"
-        },
-        "sameAs": [
-          "https://www.facebook.com/eliteconcreteut/",
-          "https://twitter.com/eliteconcreteut",
-          "https://www.instagram.com/eliteconcreteut/",
-          "https://www.pinterest.com/eliteconcreteut/",
-          "https://eliteconcreteutah.com/"
-        ]
-      },
-      "logo": {
-          "@id": "https://cdn.ckitchen.com/i_l/logos/ckitchen.png"
-      },
-      "image": {
-          "@type": "ImageObject",
-          "url": "https://www.ckitchen.com/crm/userfiles/2a06815c-a613-4616-94cf-ebffa45f5734.jpg",
-          "height": "565",
-          "width": "847",
-          "@id": "https://www.ckitchen.com/crm/userfiles/2a06815c-a613-4616-94cf-ebffa45f5734.jpg"
-      },
-      "brand": {
-          "@id": "https://www.ckitchen.com/"
-      },
-      "additionalType": "https://en.wikipedia.org/wiki/Consultant",
-      "url": "https://www.ckitchen.com/design/consulting/",
-      "areaServed": "http://www.wikidata.org/entity/Q60",
-      "description": "The role of the food service operation consultant is to guide the client in the following ways. First, a general review of the project and the available square footage for storage, prep, production and clean up. Also the \"front of the house\" food displays, anticipated seating of the dining/lounge and/or bar as applicable, the traffic patterns that include entry, delivery and trash removal.  Next, the client's menu is reviewed and equipment is properly matched for its production. The future expansion or changes in the menu are also considered. The proper layout of the vital kitchen areas will have a major impact on cost savings to the owner/operator. Included in these savings are labor, breakage, food waste, food yield, energy efficiencies and waste handling.  Consulting services are offered independent of a complete project or as part of a design.",
-      "name": "Food Service Operation Consulting",
-      "@id": "https://www.ckitchen.com/design/consulting/"
+    "@context": "https://schema.org/", 
+    "@type": "Product", 
+    "name": "Concrete Staining",
+    "image": "https://eliteconcreteutah.com/img/stamped-concrete-around-a-swimming-pool.jpg",
+    "description": "If you’re looking for an affordable way to make your boring gray concrete look amazing then concrete staining is for you. You no longer have to settle for ugly gray concrete. Instead you can have great looking concrete that matches your house, decor or whatever you want! Our concrete staining service is perfect for driveways, patios, basements, retaining wall or any other concrete surface you have! Our stain system is perfect for your home, business or even industrial environments. If you need help planning out your project we have you covered there too. We are always happy to make a sample or two for you so you can see what will work with your space. We are constantly trying new products and methods to make sure you’re getting the best service possible. Have any questions about stained concrete? Feel free to contact us, and we would be happy to answer them.",
+    "brand": "Elite Concrete Utah",
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "5",
+      "bestRating": "5",
+      "worstRating": "5",
+      "ratingCount": "3"
+    }
   }
   </script>
