--- a/_includes/schema/concrete-staining.html
+++ b/_includes/schema/concrete-staining.html
@@ -29,12 +29,28 @@
     "image": "https://eliteconcreteutah.com/img/stamped-concrete-around-a-swimming-pool.jpg",
     "description": "If you’re looking for an affordable way to make your boring gray concrete look amazing then concrete staining is for you. You no longer have to settle for ugly gray concrete. Instead you can have great looking concrete that matches your house, decor or whatever you want! Our concrete staining service is perfect for driveways, patios, basements, retaining wall or any other concrete surface you have! Our stain system is perfect for your home, business or even industrial environments. If you need help planning out your project we have you covered there too. We are always happy to make a sample or two for you so you can see what will work with your space. We are constantly trying new products and methods to make sure you’re getting the best service possible. Have any questions about stained concrete? Feel free to contact us, and we would be happy to answer them.",
     "brand": "Elite Concrete Utah",
+    "sku": "concrete-staining",
+    "gtin8": "concrete-staining",
     "aggregateRating": {
       "@type": "AggregateRating",
       "ratingValue": "5",
       "bestRating": "5",
       "worstRating": "5",
-      "ratingCount": "3"
+      "ratingCount": "1",
+      "reviewCount": "1"
+    },
+    "review": {
+      "@type": "Review",
+      "name": "Sam Patterson",
+      "reviewBody": "Absolutely amazing service! My patio looks amazing. Elite Concrete was always on time, polite, clean and friendly. I highly recommend them!",
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5",
+        "bestRating": "5",
+        "worstRating": "5"
+      },
+      "datePublished": "2020-05-15",
+      "author": {"@type": "Person", "name": "Sam Patterson"}
     }
   }
   </script>
