--- a/_includes/service/sidebar.html
+++ b/_includes/service/sidebar.html
@@ -37,7 +37,7 @@
             </li>
         </ul>
     </div>
-    <div class="widget widget-form">
+    <div class="widget widget-form d-none d-sm-block">
         <div class="heading-layout3">
             <h3>Let's Talk About Your Project</h3>
         </div>
@@ -66,7 +66,7 @@
             <div class="form-response"></div>
         </form>
     </div>
-    <div class="widget widget-banner">
+    <div class="widget widget-banner d-none d-sm-block">
         <div class="banner-img">
             <img src="{{ site.url }}/img/metallic-epoxy-floor-in-waiting-room.jpg" alt="Metallic Epoxy Flooring">
             <div class="item-content">
