--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -232,10 +232,16 @@
                                 <li>
                                     <a href="{{ site.url }}/services/concrete-staining-utah">Concrete Staining</a>
                                 </li>
+                                <li>
+                                    <a href="{{ site.url }}/services/decorative-concrete-utah">Decorative Concrete</a>
+                                </li>
                             </ul>
                             <ul class="footer-menu-list">
                                 <li>
                                     <a href="{{ site.url }}/blog">Blog</a>
+                                </li>
+                                <li>
+                                    <a href="{{ site.url }}/sitemap.xml" target="_blank">Sitemap</a>
                                 </li>
                             </ul>
                         </div>
@@ -244,7 +250,7 @@
                 <div class="col-lg-4">
                     <div class="footer-box-layout1">
                         <div class="footer-title">
-                            <h3>Newsletter</h3>
+                            <h3>Contact Us</h3>
                         </div>
                         <div class="footer-form-box">
                             <div class="contact-box-layout1">
