--- a/_layouts/about-page.html
+++ b/_layouts/about-page.html
@@ -3,15 +3,15 @@ layout: default
 ---
 
 <!-- Inne Page Banner Area Start Here -->
-<section class="inner-page-banner bg-common" data-bg-image="img/figure/breadcumb.jpg">
+<section class="inner-page-banner bg-common" data-bg-image="img/h1.png">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="breadcrumbs-area">
-                    <h1>About Us</h1>
+                    <h1>About Elite Concrete Utah</h1>
                     <ul>
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="{{ site.url }}">Home</a>
                         </li>
                         <li>About Us</li>
                     </ul>
@@ -27,8 +27,7 @@ layout: default
         <div class="row justify-content-center">
             <div class="col-xl-10 col-12">
                 <div class="heading-layout1">
-                    <h2>We Won The ‘Best Roofing Company’ Award 2019 &amp; Tightly 
-                        Connected with our communities.</h2>
+                    <h2>We Provide A Wide Range Of Concrete And Epoxy Services All Across Utah</h2>
                     <p> Simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
                         standard dummy text ever since the when an unknown printer took a galley of type and scrambled 
                         it to make a type specimen book. It has survived not only five centuries but also the leap into 
