--- a/_layouts/services.html
+++ b/_layouts/services.html
@@ -51,7 +51,7 @@ layout: default
                 <div class="about-box-layout5">
                     <div class="about-box-img">
                         <div class="item-img">
-                            <img src="img/service/service20.jpg" alt="service">
+                            <img src="img/about-elite-concrete-utah.jpg" alt="about elite concrete utah">
                         </div>
                         <div class="sl-number">02</div>
                     </div>
