--- a/_layouts/about-page.html
+++ b/_layouts/about-page.html
@@ -52,7 +52,7 @@ layout: default
             </div>
         </div>
         <div class="single-item right-item">
-            <img src="img/about/about4.jpg" alt="About Us">
+            <img src="{{ site.url }}/img/about-elite-concrete-utah.jpg" alt="About Elite Concrete Utah">
         </div>
     </div>
 </section>
