--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -177,7 +177,7 @@
 
 
 <!-- Call To Action Area Start Here -->
-<section class="action-wrap-layout1 bg-common" data-bg-image=https://eliteconcreteutah.com/img/figure/banner-shape.png">
+<section class="action-wrap-layout1 bg-common" data-bg-image="https://eliteconcreteutah.com/img/figure/banner-shape.png">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-9 col-12">
